--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,9 @@ dependencies {
     // MaterialDesign
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
+    //Timber
+  //  implementation 'com.github.ajalt:timberkt:1.5.1'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
