--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "http://jcenter.bintray.com"}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
